# NRC-CASP-17-ENGINE

./: .gitignore  COMMERCIAL_USE.md  LICENSE-DATA  PATENT_PLEDGE.md  README.md  TRADEMARK_POLICY.md  app.py  pyproject.toml  requirements.txt  run_tests.py
examples/: fold_example.py
scripts/: generate_rna_targets_07-09-2026.py  math_hyperparameter_calibration.py
src/nrc_casp17_engine/: __init__.py  atoms.py  biophysics.py  casp17_backbone_refiner.py  chemistry.py  deposition.py  energy.py  engine.py  fold_and_submit_open_5_targets.py  force_weights.json  forcefield.py  geometry.py  main.py  optimizer.py  protein_library.py  repair_and_resubmit_30_models_perfect.py  repair_and_submit_M2415.py  reporting.py  steric_clash_fixer.py  ttt7.py  ttt7_refinement_engine.py  validation.py
tests/: test_ab_initio.py  test_contacts.py  test_engine.py
