[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc-casp17-engine"
version = "1.0.0"
description = "Deterministic pure math protein folding engine built on the Nexus Resonance Codex (NRC) framework."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "CC-BY-NC-SA-4.0" }
authors = [
    { name = "Nexus Resonance Codex Team", email = "jtrageser@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "plotly>=5.3.0",
    "gradio>=4.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/Nexus-Resonance-Codex/NRC-CASP-17-ENGINE"
Bug-Tracker = "https://github.com/Nexus-Resonance-Codex/NRC-CASP-17-ENGINE/issues"
